# fbspinner

./: .gitignore  Cargo.toml  PKGBUILD  README.md
scripts/: boot.py  convert.py  convertbuild.py  flatten.py
src/: framebuffer.rs  lib.rs  main.rs
src/framebuffer/: common.rs  mod.rs  screeninfo.rs
systemd/: fbspinner.service
