[package]
name = "fbspinner"
version = "0.1.1"
authors = ["Mathias Rav <m@git.strova.dk>"]
description = "Show a spinner on the framebuffer during system boot"
readme = "README.md"
keywords = ["linux", "framebuffer"]
categories = ["command-line-utilities"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Mortal/fbspinner"

[dependencies]
flate2 = "1.0"
libc = "0.2"
gel = {path = "../gel"}
bmp = "*"
